Fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 main {
   max-width: 640px;
-  padding: 36px;
+  padding: 36px 21px;
   margin-inline: auto;
 }
 
@@ -39,21 +39,36 @@ main {
 
 .form {
   display: grid;
-  grid-template: 40px 40px / 1fr 1fr;
+  grid-template-areas:
+    "top bottom"
+    "button button";
+  grid-template-rows: 40px 40px;
   gap: 17px;
+  max-width: 100%;
   margin-bottom: 17px;
 }
 
 .form--input {
   font-family: "Karla", sans-serif;
+  max-width: 100%;
   border-radius: 5px;
   border: 1px solid #d5d4d8;
   text-indent: 5px;
 }
 
+.form--input--top {
+  grid-area: top;
+}
+
+.form--input--bottom {
+  grid-area: bottom;
+}
+
 .form--button {
-  grid-column: 1 / -1;
+  grid-area: button;
   font-family: "Karla", sans-serif;
+  max-width: 100%;
+  /* width: 186px; */
   border-radius: 5px;
   background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
   color: white;
@@ -94,4 +109,10 @@ main {
 
 .top {
   top: 0;
+}
+
+@media (min-width: 609px) {
+  main {
+    padding: 36px;
+  }
 }
